[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vordr"
dynamic = ["version"]
description = "The warden of your servers — status, resources, cost/expiry and security of Linux hosts over SSH."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Gustavo Almeida" }]
keywords = ["monitoring", "ssh", "devops", "security", "cli", "servers", "uptime", "billing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/gusta-ve/vordr"
Repository = "https://github.com/gusta-ve/vordr"
Issues = "https://github.com/gusta-ve/vordr/issues"

[project.scripts]
vordr = "vordr.cli:app"

[tool.hatch.version]
path = "src/vordr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vordr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# probe.py embeds shell scripts (awk one-liners) that don't fit in 100 columns.
"src/vordr/probe.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
